<resources>
    <string name="app_name">WhereAbout</string>
    <string name="title_activity_maps">WhereAbout</string>
    <string name="title_activity_register">Registration</string>
    <string name="error_no_phone_no_in_contact">no phone number in contact</string>
    <string name="contact_list">Contact List</string>
    <string name="action_settings">Settings</string>
    <string name="my_data">MyData</string>
    <string name="Username">Name/Alias: </string>
    <string name="name_hint">Enter your Name here. </string>
    <string name="pass_hint">Enter new Password </string>
    <string name="re_pass_hint">Retype Password </string>
    <string name="register">Register </string>
    <string name="str_refresh">Refresh</string>
    <string name="friends_list">Friends List</string>
    <string name="phone_number">Your Phone Number: </string>
    <string name="new_password">New Password:</string>
    <string name="pref_chkbox_enable_pass">Change Password</string>
    <string name="title_activity_settings">Settings</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
