<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:weightSum="1">

     <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:orientation="horizontal"
         android:layout_weight="0.06">

        <TextView
            android:text="@string/Username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:textSize="@dimen/abc_text_size_medium_material" />
        <EditText
            android:id="@+id/pref_user_name"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:hint="Enter your Name Here"
            android:gravity="center_vertical" />
        </LinearLayout>
    <View android:layout_width="fill_parent"
        android:layout_height="2px"
        android:background="#90909090"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"/>
    <CheckBox
        android:id="@+id/pref_update_passwrd"
        android:text="@string/pref_chkbox_enable_pass"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:checked="false"/>
    <View android:layout_width="fill_parent"
        android:layout_height="2px"
        android:background="#90909090"/>
    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:orientation="horizontal"
        android:layout_gravity="center_vertical">

        <TextView
            android:id="@+id/pref_newpass_txtview"
            android:text="@string/new_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="invisible"/>
        <EditText
            android:id="@+id/new_passwrd_edt_txt"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:hint="Password"
            android:inputType="textPassword"
            android:visibility="invisible"/>
    </LinearLayout>
    <View android:layout_width="fill_parent"
        android:layout_height="2px"
        android:background="#90909090"/>
    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:orientation="horizontal"
        android:layout_gravity="center_vertical">

        <TextView
            android:id="@+id/pref_repass_txtview"
            android:text="@string/new_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="invisible"/>
        <EditText
            android:id="@+id/re_passwrd_edt_txt"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:hint="Password"
            android:inputType="textPassword"
            android:visibility="invisible"/>
    </LinearLayout>
    <View android:layout_width="fill_parent"
        android:layout_height="2px"
        android:background="#90909090"/>
</LinearLayout>